[gd_scene load_steps=2 format=2]

[ext_resource path="res://Slot.gd" type="Script" id=1]

[node name="Slot" type="Panel"]
rect_min_size = Vector2( 64, 64 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 64.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="left_single_click" from="." to="." method="_on_Slot_left_single_click"]
[connection signal="mouse_entered" from="." to="." method="_on_Slot_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Slot_mouse_exited"]
